--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "acmekit build",
     "start": "acmekit start",
     "dev": "acmekit develop",
+    "seed": "echo 'Add your seed script'",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
