--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
-    "@acmekit/acmekit": "2.13.14",
-    "@acmekit/admin-sdk": "2.13.14",
-    "@acmekit/cli": "2.13.14",
-    "@acmekit/framework": "2.13.14"
+    "@acmekit/acmekit": "2.13.15",
+    "@acmekit/admin-sdk": "2.13.15",
+    "@acmekit/admin-shared": "^2.13.15",
+    "@acmekit/cli": "2.13.15",
+    "@acmekit/dashboard": "^2.13.15",
+    "@acmekit/framework": "2.13.15"
   },
   "devDependencies": {
-    "@acmekit/test-utils": "2.13.14",
+    "@acmekit/test-utils": "2.13.15",
     "@swc/core": "^1.7.28",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
