--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-STORE_CORS=http://localhost:8000,https://docs.acmekit.com
+CLIENT_CORS=http://localhost:8000,https://docs.acmekit.com
 ADMIN_CORS=http://localhost:5173,http://localhost:9000,https://docs.acmekit.com
 AUTH_CORS=http://localhost:5173,http://localhost:9000,https://docs.acmekit.com
 REDIS_URL=redis://localhost:6379
