--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "vite": "^5.4.14",
-    "yalc": "^1.0.0-pre.53"
+    "@jimsheen/yalc": "^1.2.2"
   },
   "engines": {
     "node": ">=20"
